@startuml

class ShipChiefElectricalEngineer{

}

class User{

}

class UserRole{

}

class Company{

}

class GetSummaryDocumentMaterialsUI{
    -GetSetOfMaterialsToContainerAtSevenController getSetOfMaterialsToContainerAtSevenController
    +GetSummaryDocumentMaterialsUI()
    +run()
}

class GetSummaryDocumentMaterialsController{
    -Company company
    +GetSummaryDocumentMaterialsController()
    +GetSummaryDocumentMaterialsController(Company company)
    +getSummaryDocumentMaterialsController()
    +getCompany()
}

ShipChiefElectricalEngineer --> GetSummaryDocumentMaterialsUI : Access
GetSummaryDocumentMaterialsUI -down-> GetSummaryDocumentMaterialsController : Connects with
ShipChiefElectricalEngineer --> User : is a
User --> UserRole : has
GetSummaryDocumentMaterialsController -up-> GetSummaryDocumentMaterialsUI : Returns Info
GetSummaryDocumentMaterialsController --> Company : Connects with
Company --> GetSummaryDocumentMaterialsController : Returns Info
Company --> DataBase : Connects

@enduml